force-app/main/default/objects/Scheduled_Transaction__c/Scheduled_Transaction__c.object-meta.xml
<CustomObject>
    <label>Scheduled Transaction</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Loan Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>