force-app/main/default/objects/Scheduled_Transaction__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF(ISNULL(Principal__c),0,Principal__c)+ IF(ISNULL(Fees__c),0,Fees__c) +  IF(ISNULL(Interest__c),0,Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>