force-app/main/default/objects/Scheduled_Transaction__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Scheduled Transactions</relationshipLabel>
    <relationshipName>Scheduled_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>