force-app/main/default/objects/Scheduled_Transaction__c/fields/Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percentage__c</fullName>
    <formula>(Paid_Total_Amount__c  / Amount__c) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>