force-app/main/default/objects/Scheduled_Transaction__c/fields/Paid_Principal__c.field-meta.xml
<CustomField>
    <fullName>Paid_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Paid Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>