force-app/main/default/objects/Scheduled_Transaction__c/fields/Paid_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Total_Amount__c</fullName>
    <formula>IF(ISNULL( Paid_Principal__c ),0,Paid_Principal__c )+ IF(ISNULL(Paid_Fees__c),0,Paid_Fees__c) + IF(ISNULL(Paid_Interest__c),0,Paid_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>