force-app/main/default/objects/Scheduled_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disbursal</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Balloon</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>